# data-dictionary-agent

./: .gitignore  AGENTS.md  ARCHITECTURE.md  FUTURE_WORK.md  PROJECT_SCOPE.md  README.md  pyproject.toml
config/examples/: asset_register_context.yaml  crm_context.yaml  ecommerce_context.yaml
docs/: agent_mode.md  config_overrides.md  example_commands.md  extension_paths.md  how_it_works.md  hybrid_agent.md  interpreting_outputs.md  llm_boundary.md  release_checklist.md
sample_data/asset_register/: network_assets.csv
sample_data/crm_contacts/: contacts_clean.csv  contacts_messy.csv
sample_data/ecommerce_orders/: orders.csv
src/data_dictionary_agent/: __init__.py  agent_reporting.py  agent_runner.py  cli.py  config.py  constants.py  dictionary_builder.py  intake.py  llm_client.py  llm_descriptions.py  output_writers.py  planner.py  profiling.py  semantic_inference.py  suggested_overrides.py  trace_writer.py
tests/: test_agent_reporting.py  test_agent_runner.py  test_cli.py  test_config.py  test_dictionary_builder.py  test_intake.py  test_llm_client.py  test_llm_descriptions.py  test_output_writers.py  test_planner.py  test_profiling.py  test_semantic_inference.py  test_suggested_overrides.py
