[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-dictionary-agent"
version = "0.1.0"
description = "Local-first deterministic dataset profiling for data dictionary generation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.0.0",
  "openpyxl>=3.1.0",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]
llm = [
  "openai>=1.0.0",
]

[project.scripts]
data-dictionary-agent = "data_dictionary_agent.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
